// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`colorMapping 1`] = `
{
  "annotation": {},
  "chartType": "columnParallel",
  "config": {
    "columnParallel": {
      "backgroundColor": "transparent",
      "color": {
        "colorMapping": {
          "E": "green",
          "E-销售额": "red",
          "利润": "yellow",
        },
        "colorScheme": [
          "#8D72F6",
          "#5766EC",
          "#66A3FE",
          "#51D5E6",
          "#4EC0B3",
          "#F9DF90",
          "#F9AD71",
          "#ED8888",
          "#E9A0C3",
          "#D77DD3",
        ],
      },
      "crosshairRect": {
        "labelBackgroundColor": "#364159",
        "labelColor": "#ffffff",
        "labelVisible": true,
        "rectColor": "#3641594d",
        "visible": true,
      },
      "label": {
        "enable": true,
      },
      "legend": {
        "border": true,
        "enable": true,
        "labelFontColor": "#646A73",
        "labelFontSize": 12,
        "labelFontWeight": 400,
        "maxSize": 1,
        "position": "rt",
        "shapeType": "rectRound",
      },
      "stackCornerRadius": [
        4,
        4,
        4,
        4,
      ],
      "tooltip": {
        "enable": true,
      },
      "xAxis": {
        "grid": {
          "gridColor": "#36415926",
          "gridWidth": 0.5,
          "visible": false,
        },
        "label": {
          "labelAngle": 0,
          "labelColor": "#797B85",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "labelAutoHide": true,
        "labelAutoHideGap": 4,
        "labelAutoLimit": true,
        "labelAutoLimitLength": 80,
        "labelAutoRotate": false,
        "labelAutoRotateAngleRange": [
          0,
          -45,
          -90,
        ],
        "line": {
          "lineColor": "#3641594d",
          "lineWidth": 1,
          "visible": true,
        },
        "tick": {
          "tickColor": "#3641594d",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#646A73",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
      },
      "yAxis": {
        "grid": {
          "gridColor": "#36415926",
          "gridWidth": 0.5,
          "visible": true,
        },
        "inverse": false,
        "label": {
          "labelAngle": 0,
          "labelColor": "#797B85",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "line": {
          "lineColor": "#3641594d",
          "lineWidth": 1,
          "visible": false,
        },
        "nice": true,
        "tick": {
          "tickColor": "#3641594d",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#646A73",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
        "zero": true,
      },
    },
  },
  "customTheme": {
    "config": {
      "columnParallel": {
        "backgroundColor": "transparent",
        "color": {
          "colorScheme": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
        },
        "crosshairRect": {
          "labelBackgroundColor": "#364159",
          "labelColor": "#ffffff",
          "labelVisible": true,
          "rectColor": "#3641594d",
          "visible": true,
        },
        "label": {
          "enable": true,
        },
        "legend": {
          "border": true,
          "enable": true,
          "labelFontColor": "#646A73",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "maxSize": 1,
          "position": "rt",
          "shapeType": "rectRound",
        },
        "stackCornerRadius": [
          4,
          4,
          4,
          4,
        ],
        "tooltip": {
          "enable": true,
        },
        "xAxis": {
          "grid": {
            "gridColor": "#36415926",
            "gridWidth": 0.5,
            "visible": false,
          },
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "labelAutoHide": true,
          "labelAutoHideGap": 4,
          "labelAutoLimit": true,
          "labelAutoLimitLength": 80,
          "labelAutoRotate": false,
          "labelAutoRotateAngleRange": [
            0,
            -45,
            -90,
          ],
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": true,
          },
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
        },
        "yAxis": {
          "grid": {
            "gridColor": "#36415926",
            "gridWidth": 0.5,
            "visible": true,
          },
          "inverse": false,
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": false,
          },
          "nice": true,
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
          "zero": true,
        },
      },
    },
  },
  "dataset": [
    {
      "__DimGroupID__": "A-利润-profit",
      "__DimGroup__": "A-利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "date": "2019",
        "profit": 10,
        "sales": 20,
        "type": "A",
      },
      "date": "2019",
      "profit": 10,
      "type": "A",
    },
    {
      "__DimGroupID__": "A-销售额-sales",
      "__DimGroup__": "A-销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 20,
      "__OriginalData__": {
        "date": "2019",
        "profit": 10,
        "sales": 20,
        "type": "A",
      },
      "date": "2019",
      "sales": 20,
      "type": "A",
    },
    {
      "__DimGroupID__": "B-利润-profit",
      "__DimGroup__": "B-利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2019",
        "profit": 30,
        "sales": 60,
        "type": "B",
      },
      "date": "2019",
      "profit": 30,
      "type": "B",
    },
    {
      "__DimGroupID__": "B-销售额-sales",
      "__DimGroup__": "B-销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2019",
        "profit": 30,
        "sales": 60,
        "type": "B",
      },
      "date": "2019",
      "sales": 60,
      "type": "B",
    },
    {
      "__DimGroupID__": "C-利润-profit",
      "__DimGroup__": "C-利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2019",
        "profit": 30,
        "sales": 60,
        "type": "C",
      },
      "date": "2019",
      "profit": 30,
      "type": "C",
    },
    {
      "__DimGroupID__": "C-销售额-sales",
      "__DimGroup__": "C-销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2019",
        "profit": 30,
        "sales": 60,
        "type": "C",
      },
      "date": "2019",
      "sales": 60,
      "type": "C",
    },
    {
      "__DimGroupID__": "D-利润-profit",
      "__DimGroup__": "D-利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 50,
      "__OriginalData__": {
        "date": "2019",
        "profit": 50,
        "sales": 100,
        "type": "D",
      },
      "date": "2019",
      "profit": 50,
      "type": "D",
    },
    {
      "__DimGroupID__": "D-销售额-sales",
      "__DimGroup__": "D-销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2019",
        "profit": 50,
        "sales": 100,
        "type": "D",
      },
      "date": "2019",
      "sales": 100,
      "type": "D",
    },
    {
      "__DimGroupID__": "E-利润-profit",
      "__DimGroup__": "E-利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 40,
      "__OriginalData__": {
        "date": "2019",
        "profit": 40,
        "sales": 80,
        "type": "E",
      },
      "date": "2019",
      "profit": 40,
      "type": "E",
    },
    {
      "__DimGroupID__": "E-销售额-sales",
      "__DimGroup__": "E-销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 80,
      "__OriginalData__": {
        "date": "2019",
        "profit": 40,
        "sales": 80,
        "type": "E",
      },
      "date": "2019",
      "sales": 80,
      "type": "E",
    },
    {
      "__DimGroupID__": "A-利润-profit",
      "__DimGroup__": "A-利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "date": "2020",
        "profit": 10,
        "sales": 20,
        "type": "A",
      },
      "date": "2020",
      "profit": 10,
      "type": "A",
    },
    {
      "__DimGroupID__": "A-销售额-sales",
      "__DimGroup__": "A-销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 20,
      "__OriginalData__": {
        "date": "2020",
        "profit": 10,
        "sales": 20,
        "type": "A",
      },
      "date": "2020",
      "sales": 20,
      "type": "A",
    },
    {
      "__DimGroupID__": "B-利润-profit",
      "__DimGroup__": "B-利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2020",
        "profit": 30,
        "sales": 60,
        "type": "B",
      },
      "date": "2020",
      "profit": 30,
      "type": "B",
    },
    {
      "__DimGroupID__": "B-销售额-sales",
      "__DimGroup__": "B-销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2020",
        "profit": 30,
        "sales": 60,
        "type": "B",
      },
      "date": "2020",
      "sales": 60,
      "type": "B",
    },
    {
      "__DimGroupID__": "C-利润-profit",
      "__DimGroup__": "C-利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2020",
        "profit": 30,
        "sales": 60,
        "type": "C",
      },
      "date": "2020",
      "profit": 30,
      "type": "C",
    },
    {
      "__DimGroupID__": "C-销售额-sales",
      "__DimGroup__": "C-销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2020",
        "profit": 30,
        "sales": 60,
        "type": "C",
      },
      "date": "2020",
      "sales": 60,
      "type": "C",
    },
    {
      "__DimGroupID__": "D-利润-profit",
      "__DimGroup__": "D-利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 50,
      "__OriginalData__": {
        "date": "2020",
        "profit": 50,
        "sales": 100,
        "type": "D",
      },
      "date": "2020",
      "profit": 50,
      "type": "D",
    },
    {
      "__DimGroupID__": "D-销售额-sales",
      "__DimGroup__": "D-销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2020",
        "profit": 50,
        "sales": 100,
        "type": "D",
      },
      "date": "2020",
      "sales": 100,
      "type": "D",
    },
    {
      "__DimGroupID__": "E-利润-profit",
      "__DimGroup__": "E-利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 40,
      "__OriginalData__": {
        "date": "2020",
        "profit": 40,
        "sales": 80,
        "type": "E",
      },
      "date": "2020",
      "profit": 40,
      "type": "E",
    },
    {
      "__DimGroupID__": "E-销售额-sales",
      "__DimGroup__": "E-销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 80,
      "__OriginalData__": {
        "date": "2020",
        "profit": 40,
        "sales": 80,
        "type": "E",
      },
      "date": "2020",
      "sales": 80,
      "type": "E",
    },
  ],
  "datasetReshapeInfo": [
    {
      "foldInfo": {
        "foldMap": {
          "profit": "利润",
          "sales": "销售额",
        },
        "measureId": "__MeaId__",
        "measureName": "__MeaName__",
        "measureValue": "__MeaValue__",
      },
      "id": "2D1M",
      "index": 0,
      "unfoldInfo": {
        "colorIdMap": {
          "A-利润-profit": "A-利润",
          "A-销售额-sales": "A-销售额",
          "B-利润-profit": "B-利润",
          "B-销售额-sales": "B-销售额",
          "C-利润-profit": "C-利润",
          "C-销售额-sales": "C-销售额",
          "D-利润-profit": "D-利润",
          "D-销售额-sales": "D-销售额",
          "E-利润-profit": "E-利润",
          "E-销售额-sales": "E-销售额",
        },
        "colorItems": [
          "A-利润-profit",
          "A-销售额-sales",
          "B-利润-profit",
          "B-销售额-sales",
          "C-利润-profit",
          "C-销售额-sales",
          "D-利润-profit",
          "D-销售额-sales",
          "E-利润-profit",
          "E-销售额-sales",
        ],
        "groupId": "__DimGroupID__",
        "groupName": "__DimGroup__",
      },
    },
  ],
  "dimensions": [
    {
      "alias": "日期",
      "id": "date",
      "location": "dimension",
    },
    {
      "alias": "类型",
      "id": "type",
      "location": "dimension",
    },
  ],
  "encoding": [
    {
      "color": [
        "__MeaName__",
      ],
      "group": [
        "__DimGroupID__",
      ],
      "x": [
        "date",
      ],
      "y": [
        "__MeaValue__",
      ],
    },
  ],
  "locale": "zh-CN",
  "markStyle": {},
  "measures": [
    {
      "alias": "利润",
      "id": "profit",
    },
    {
      "alias": "销售额",
      "id": "sales",
    },
  ],
}
`;

exports[`colorMapping 2`] = `
{
  "animation": true,
  "axes": [
    {
      "domainLine": {
        "style": {
          "lineWidth": 1,
          "stroke": "#3641594d",
        },
        "visible": true,
      },
      "grid": {
        "style": {
          "lineWidth": 0.5,
          "stroke": "#36415926",
        },
        "visible": false,
      },
      "hover": true,
      "label": {
        "autoHide": true,
        "autoHideMethod": "greedy",
        "autoHideSeparation": 4,
        "autoLimit": true,
        "autoRotate": false,
        "autoRotateAngle": [
          0,
          -45,
          -90,
        ],
        "flush": true,
        "lastVisible": true,
        "minGap": 4,
        "space": 8,
        "style": {
          "angle": 0,
          "fill": "#797B85",
          "fontSize": 12,
          "fontWeight": 400,
          "maxLineWidth": 80,
        },
        "visible": true,
      },
      "maxHeight": 140,
      "orient": "bottom",
      "paddingInner": [
        0.15,
        0.1,
      ],
      "paddingOuter": [
        0.075,
        0.1,
      ],
      "sampling": false,
      "tick": {
        "inside": false,
        "style": {
          "stroke": "#3641594d",
        },
        "tickSize": 4,
        "visible": false,
      },
      "title": {
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "text": "",
        "visible": false,
      },
      "type": "band",
      "visible": true,
    },
    {
      "base": 10,
      "domainLine": {
        "style": {
          "lineWidth": 1,
          "stroke": "#3641594d",
        },
        "visible": false,
      },
      "grid": {
        "style": {
          "lineWidth": 0.5,
          "stroke": "#36415926",
        },
        "visible": true,
      },
      "innerOffset": {
        "top": 7,
      },
      "inverse": false,
      "label": {
        "formatMethod": [Function],
        "style": {
          "angle": 0,
          "fill": "#797B85",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "visible": true,
      },
      "max": undefined,
      "min": undefined,
      "nice": true,
      "orient": "left",
      "tick": {
        "inside": false,
        "style": {
          "stroke": "#3641594d",
        },
        "tickSize": 4,
        "visible": false,
      },
      "title": {
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "text": "",
        "visible": false,
      },
      "type": "linear",
      "visible": true,
      "zero": true,
    },
  ],
  "background": "transparent",
  "bar": {
    "state": {
      "hover": {
        "fillOpacity": 0.6,
      },
    },
    "style": {
      "lineWidth": 1,
    },
  },
  "color": {
    "domain": [
      "A-利润-profit",
      "A-销售额-sales",
      "B-利润-profit",
      "B-销售额-sales",
      "C-利润-profit",
      "C-销售额-sales",
      "D-利润-profit",
      "D-销售额-sales",
      "E-利润-profit",
      "E-销售额-sales",
    ],
    "range": [
      "#8D72F6",
      "#5766EC",
      "#66A3FE",
      "#51D5E6",
      "#4EC0B3",
      "#F9DF90",
      "#F9AD71",
      "#ED8888",
      "#E9A0C3",
      "#D77DD3",
    ],
    "specified": {
      "A-利润-profit": "yellow",
      "B-利润-profit": "yellow",
      "C-利润-profit": "yellow",
      "D-利润-profit": "yellow",
      "E-利润-profit": "yellow",
      "E-销售额-sales": "red",
    },
    "type": "ordinal",
  },
  "crosshair": {
    "xField": {
      "label": {
        "labelBackground": {
          "style": {
            "fill": "#364159",
          },
          "visible": true,
        },
        "style": {
          "fill": "#ffffff",
        },
        "visible": true,
      },
      "line": {
        "style": {
          "fill": "#3641594d",
          "lineWidth": 0,
          "opacity": 0.2,
        },
        "type": "rect",
      },
      "visible": true,
    },
  },
  "data": {
    "fields": {
      "__DimGroupID__": {
        "sortIndex": 0,
      },
      "date": {
        "sortIndex": 0,
      },
    },
    "id": "2D1M",
    "values": [
      {
        "__DimGroupID__": "A-利润-profit",
        "__DimGroup__": "A-利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "date": "2019",
          "profit": 10,
          "sales": 20,
          "type": "A",
        },
        "date": "2019",
        "profit": 10,
        "type": "A",
      },
      {
        "__DimGroupID__": "A-销售额-sales",
        "__DimGroup__": "A-销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 20,
        "__OriginalData__": {
          "date": "2019",
          "profit": 10,
          "sales": 20,
          "type": "A",
        },
        "date": "2019",
        "sales": 20,
        "type": "A",
      },
      {
        "__DimGroupID__": "B-利润-profit",
        "__DimGroup__": "B-利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2019",
          "profit": 30,
          "sales": 60,
          "type": "B",
        },
        "date": "2019",
        "profit": 30,
        "type": "B",
      },
      {
        "__DimGroupID__": "B-销售额-sales",
        "__DimGroup__": "B-销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2019",
          "profit": 30,
          "sales": 60,
          "type": "B",
        },
        "date": "2019",
        "sales": 60,
        "type": "B",
      },
      {
        "__DimGroupID__": "C-利润-profit",
        "__DimGroup__": "C-利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2019",
          "profit": 30,
          "sales": 60,
          "type": "C",
        },
        "date": "2019",
        "profit": 30,
        "type": "C",
      },
      {
        "__DimGroupID__": "C-销售额-sales",
        "__DimGroup__": "C-销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2019",
          "profit": 30,
          "sales": 60,
          "type": "C",
        },
        "date": "2019",
        "sales": 60,
        "type": "C",
      },
      {
        "__DimGroupID__": "D-利润-profit",
        "__DimGroup__": "D-利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 50,
        "__OriginalData__": {
          "date": "2019",
          "profit": 50,
          "sales": 100,
          "type": "D",
        },
        "date": "2019",
        "profit": 50,
        "type": "D",
      },
      {
        "__DimGroupID__": "D-销售额-sales",
        "__DimGroup__": "D-销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2019",
          "profit": 50,
          "sales": 100,
          "type": "D",
        },
        "date": "2019",
        "sales": 100,
        "type": "D",
      },
      {
        "__DimGroupID__": "E-利润-profit",
        "__DimGroup__": "E-利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 40,
        "__OriginalData__": {
          "date": "2019",
          "profit": 40,
          "sales": 80,
          "type": "E",
        },
        "date": "2019",
        "profit": 40,
        "type": "E",
      },
      {
        "__DimGroupID__": "E-销售额-sales",
        "__DimGroup__": "E-销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 80,
        "__OriginalData__": {
          "date": "2019",
          "profit": 40,
          "sales": 80,
          "type": "E",
        },
        "date": "2019",
        "sales": 80,
        "type": "E",
      },
      {
        "__DimGroupID__": "A-利润-profit",
        "__DimGroup__": "A-利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "date": "2020",
          "profit": 10,
          "sales": 20,
          "type": "A",
        },
        "date": "2020",
        "profit": 10,
        "type": "A",
      },
      {
        "__DimGroupID__": "A-销售额-sales",
        "__DimGroup__": "A-销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 20,
        "__OriginalData__": {
          "date": "2020",
          "profit": 10,
          "sales": 20,
          "type": "A",
        },
        "date": "2020",
        "sales": 20,
        "type": "A",
      },
      {
        "__DimGroupID__": "B-利润-profit",
        "__DimGroup__": "B-利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2020",
          "profit": 30,
          "sales": 60,
          "type": "B",
        },
        "date": "2020",
        "profit": 30,
        "type": "B",
      },
      {
        "__DimGroupID__": "B-销售额-sales",
        "__DimGroup__": "B-销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2020",
          "profit": 30,
          "sales": 60,
          "type": "B",
        },
        "date": "2020",
        "sales": 60,
        "type": "B",
      },
      {
        "__DimGroupID__": "C-利润-profit",
        "__DimGroup__": "C-利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2020",
          "profit": 30,
          "sales": 60,
          "type": "C",
        },
        "date": "2020",
        "profit": 30,
        "type": "C",
      },
      {
        "__DimGroupID__": "C-销售额-sales",
        "__DimGroup__": "C-销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2020",
          "profit": 30,
          "sales": 60,
          "type": "C",
        },
        "date": "2020",
        "sales": 60,
        "type": "C",
      },
      {
        "__DimGroupID__": "D-利润-profit",
        "__DimGroup__": "D-利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 50,
        "__OriginalData__": {
          "date": "2020",
          "profit": 50,
          "sales": 100,
          "type": "D",
        },
        "date": "2020",
        "profit": 50,
        "type": "D",
      },
      {
        "__DimGroupID__": "D-销售额-sales",
        "__DimGroup__": "D-销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2020",
          "profit": 50,
          "sales": 100,
          "type": "D",
        },
        "date": "2020",
        "sales": 100,
        "type": "D",
      },
      {
        "__DimGroupID__": "E-利润-profit",
        "__DimGroup__": "E-利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 40,
        "__OriginalData__": {
          "date": "2020",
          "profit": 40,
          "sales": 80,
          "type": "E",
        },
        "date": "2020",
        "profit": 40,
        "type": "E",
      },
      {
        "__DimGroupID__": "E-销售额-sales",
        "__DimGroup__": "E-销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 80,
        "__OriginalData__": {
          "date": "2020",
          "profit": 40,
          "sales": 80,
          "type": "E",
        },
        "date": "2020",
        "sales": 80,
        "type": "E",
      },
    ],
  },
  "direction": "vertical",
  "label": {
    "formatMethod": [Function],
    "visible": true,
  },
  "legends": {
    "autoPage": true,
    "data": [Function],
    "item": {
      "background": {
        "state": {
          "selectedHover": {
            "fill": "#646A73",
            "fillOpacity": 0.05,
          },
        },
      },
      "focus": true,
      "focusIconStyle": {
        "fill": "#646A73",
        "fontWeight": 400,
        "size": 14,
      },
      "label": {
        "formatMethod": [Function],
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
      },
      "maxWidth": "30%",
      "shape": {
        "space": 6,
        "style": {
          "size": 8,
          "symbolType": "rectRound",
        },
      },
    },
    "maxCol": 1,
    "maxRow": 1,
    "orient": "right",
    "padding": 0,
    "position": "start",
    "type": "discrete",
    "visible": true,
  },
  "padding": 0,
  "region": [
    {
      "clip": true,
    },
  ],
  "seriesField": "__DimGroupID__",
  "stackCornerRadius": [
    4,
    4,
    4,
    4,
  ],
  "tooltip": {
    "dimension": {
      "content": [
        {
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
    },
    "mark": {
      "content": [
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": true,
      },
    },
    "visible": true,
  },
  "type": "bar",
  "xField": [
    "date",
    "__DimGroupID__",
  ],
  "yField": "__MeaValue__",
}
`;
